--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
+    "axios": "^0.18.0",
+    "sinon": "^4.5.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.2",
     "lint-staged": "^7.0.3",
@@ -50,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-jasmine": "^2.10.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "prettier": "^1.14.2",
