--- a/.eslintrc
+++ b/.eslintrc
@@ -55,6 +55,8 @@
     },
     "env": {
         "es6": true,
-        "jasmine": true
+        "browser": true,
+        "jasmine": true,
+        "jest": true
     }
 }
