--- a/package.json
+++ b/package.json
@@ -16,7 +16,31 @@
     "update-snapshot": "jest --u"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "./setupEnzyme.js"
+    "setupTestFrameworkScriptFile": "./setupEnzyme.js",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.{js|jsx}",
+      "!src/js/index.js"
+    ],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text-summary"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 0,
+        "branches": 0,
+        "functions": 0,
+        "lines": 0
+      }
+    },
+    "testPathIgnorePatterns": [
+      "coverage"
+    ],
+    "coveragePathIgnorePatterns": [
+      "src/js/constants/"
+    ]
   },
   "lint-staged": {
     "*.js": [
