--- a/package.json
+++ b/package.json
@@ -53,19 +53,16 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
-    "axios": "^0.18.0",
-    "sinon": "^4.5.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.2",
-    "lint-staged": "^7.0.3",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "core-js": "^2.5.7",
-    "husky": "^0.14.3",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.4",
@@ -73,29 +70,31 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jasmine": "^2.10.1",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-jasmine": "^2.10.1",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^0.14.3",
     "jest": "^23.6.0",
+    "lint-staged": "^7.0.3",
     "prettier": "^1.14.2",
     "react-test-renderer": "^16.5.2",
     "redux-mock-store": "^1.5.3",
+    "sinon": "^4.5.0",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-router-dom": "^4.3.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "reselect": "^3.0.1",
-    "seamless-immutable": "^7.1.4",
-    "styled-components": "^3.4.6"
+    "reselect": "^3.0.1"
   }
 }
