--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "prepush": "yarn jest --no-cache",
     "test": "jest",
     "test:watch": "jest --watch",
-    "update-snapshot": "jest --u"
+    "update-snapshot": "jest --u",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./setupEnzyme.js",
@@ -84,7 +86,8 @@
     "sinon": "^4.5.0",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.1.8",
+    "react-styleguidist": "^7.3.10"
   },
   "dependencies": {
     "@material-ui/core": "^3.5.1",
