--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,8 @@
 {
   "presets": [
-    "env",
-    "react",
-    "stage-2"
+    "@babel/preset-env","@babel/preset-react"
   ],
   "plugins": [
-    "transform-react-jsx-source"
+    "@babel/plugin-proposal-class-properties"
   ]
 }
