--- a/package.json
+++ b/package.json
@@ -15,33 +15,7 @@
     "test:watch": "jest --watch",
     "update-snapshot": "jest --u"
   },
-  "jest": {
-    "setupTestFrameworkScriptFile": "./setupEnzyme.js",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.{js|jsx}",
-      "!src/js/index.js"
-    ],
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "text-summary"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "statements": 0,
-        "branches": 0,
-        "functions": 0,
-        "lines": 0
-      }
-    },
-    "testPathIgnorePatterns": [
-      "coverage"
-    ],
-    "coveragePathIgnorePatterns": [
-      "src/js/constants/"
-    ]
-  },
+  "sideEffects": false,
   "lint-staged": {
     "*.js": [
       "eslint --fix",
@@ -53,19 +27,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "7.0.0-bridge.0",
     "axios": "^0.18.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-react-jsx-source": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "core-js": "^2.5.7",
+    "babel-loader": "^8.0.4",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "enzyme-to-json": "^3.3.4",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
@@ -79,7 +50,6 @@
     "jest": "^23.6.0",
     "lint-staged": "^7.0.3",
     "prettier": "^1.14.2",
-    "react-test-renderer": "^16.5.2",
     "redux-mock-store": "^1.5.3",
     "sinon": "^4.5.0",
     "webpack": "^4.18.0",
@@ -87,14 +57,16 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^3.0.1"
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
+    "reselect": "^4.0.0"
   }
 }
