--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
+    "babel-polyfill": "^6.26.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
